--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -11,9 +11,6 @@ jobs:
       - uses: actions/checkout@v3  
       - name: Set up Python ${{ matrix.python-version }}  
         uses: actions/setup-python@v4  
-      - name: Test with pytest  
+      - name: Run tests with pytest  
         run: |  
-          coverage run -m pytest  -v -s  
-      - name: Generate Coverage Report  
-        run: |  
-          coverage report -m
+          pytest test_main.py -v -s
